# 3D-Modeling

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  MainApplication.cpp  MainApplication.h  MainWindow.cpp  MainWindow.h  main.cpp
